# nixcp

./: .editorconfig  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml  check.yml  test.yml
src/: lib.rs  main.rs  make_nar.rs  nixcp.rs  path_info.rs  protocol.rs  push.rs  server.rs  store.rs  uploader.rs
src/bindings/: mod.rs  nix.cpp  nix.hpp
tests/: nar.rs  path_info.rs
tests/common/: mod.rs
