[package]
name = "nixcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-compression = { version = "0.4.22", features = ["tokio", "zstd"] }
clap = { version = "4.5.34", features = ["derive"] }
ed25519-dalek = "2.1.1"
env_logger = "0.11.7"
log = "0.4.27"
nix-compat = { git = "https://github.com/tvlfyi/tvix.git", version = "0.1.0" }
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = [ "full" ]}
url = { version = "2.5.4", features = [ "serde" ]}
