[package]
name = "nixcp"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.97"
async-compression = { version = "0.4.22", features = ["tokio", "zstd"] }
clap = { version = "4.5.34", features = ["derive"] }
ed25519-dalek = "2.1.1"
futures = "0.3.31"
nix-compat = { git = "https://github.com/tvlfyi/tvix.git", version = "0.1.0" }
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = [ "full", "tracing", "parking_lot" ]}
tracing = "0.1.41"
url = { version = "2.5.4", features = [ "serde" ]}
cxx = "1.0"
console-subscriber = "0.4.1"
tempfile = "3.19.1"
tokio-util = { version = "0.7.15", features = ["io"] }
bytes = "1.10.1"
object_store = { version = "0.12.0", features = ["aws"] }
ulid = "1.2.1"
tracing-subscriber = "0.3.19"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.32"
